# teste-software

./: aluno.py  main.py  pyproject.toml  testes.py  turma.py
