[tool.poetry]
name = "teste-software"
version = "0.1.0"
description = ""
authors = ["Thiago Ribeiro <mackandalls@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue . && isort ."
test = "pytest -s -x -vv"

